--- a/ArticlesApp/ArticlesApp/Page1.xaml
+++ b/ArticlesApp/ArticlesApp/Page1.xaml
@@ -6,27 +6,19 @@
                           xmlns:local="clr-namespace:ArticlesApp.Renderer">
     <ContentPage.Content>
         <StackLayout >
-            <Label HeightRequest="200"></Label>
-            
-           
-            <Frame CornerRadius="37" BorderColor="Black"  Padding="0,0,0,0" >
-            <Grid HeightRequest="50"  >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Label Text="{x:Static fontawesome:FontAwesomeIcons.BirthdayCake}" 
-                 FontSize="24" TextColor="Black"
-                        FontFamily="{StaticResource FontAwesomeSolid }" VerticalOptions="Center" Grid.Row="0" Grid.Column="0" />
-                <local:ExtendedDatePicker Date="{Binding BirthDate}" TextColor="Black"   HorizontalOptions="StartAndExpand" BackgroundColor="Blue"
-                       VerticalOptions="End" WidthRequest="300" HeightRequest="50"  Grid.Row="0" Grid.Column="1" />
-            </Grid>
-            </Frame>
-          
-            
+            <CollectionView x:Name="test">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Frame CornerRadius="30" BorderColor="Black">
+                        <Label Text="{Binding InterestName }"/>
+                    </Frame>
+
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+
+            </CollectionView>
+
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
