--- a/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
@@ -14,7 +14,7 @@
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout Spacing="2" >
+        <StackLayout Spacing="2" VerticalOptions="FillAndExpand">
             <StackLayout Spacing="0" Padding="5,10,10,0">
                 <Image Source="Logo.png"  StyleClass="Logo"  />
                 <Grid HeightRequest="60" Padding="5,10,0,10">
