--- a/ArticlesApp/ArticlesApp/Page1.xaml
+++ b/ArticlesApp/ArticlesApp/Page1.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ArticlesApp.Page1"
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
-            xmlns:richtext="clr-namespace:Syncfusion.XForms.RichTextEditor;assembly=Syncfusion.SfRichTextEditor.XForms">
+            xmlns:richtext="clr-namespace:Syncfusion.XForms.RichTextEditor;assembly=Syncfusion.SfRichTextEditor.XForms"
+             BackgroundColor="White">
              
     <ContentPage.Content>
-        <StackLayout Padding="25" >
-            <richtext:SfRichTextEditor VerticalOptions="FillAndExpand" Text= "The rich text editor component is WYSIWYG editor that provides the best user experience to create and update the content"  />
+        <StackLayout  >
+            <richtext:SfRichTextEditor MaximumHeightRequest="50" AutoSize="Disabled" VerticalOptions="FillAndExpand" Text= "The rich text editor component is WYSIWYG editor that provides the best user experience to create and update the content"  />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
